style: fix overlay problem on safari

--- a/src/popup/styles.scss
+++ b/src/popup/styles.scss
@@ -53,6 +53,7 @@
   background-color: var(--active-color);
   border-radius: 5px;
   padding: 6px;
+  z-index: 2147483647;
 }
 
 .popup-tab {
